# bap

./: .gitattributes  .gitignore  .yamllint.yml  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  autogen.sh  config.status  configure  configure.ac  configure.scan  libtool
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml
VEX/: BAP.README  Makefile  Makefile-gcc  Makefile-icc
VEX/priv/: guest_amd64_helpers.c  guest_x86_helpers.c
batteries/: Makefile
batteries/doc/batteries/: batteries.helpindex
batteries/src/: .gitattributes
batteries/src/syntax/pa_strings/: pa_format.ml
doc/: .gitignore  Makefile
libasmir/: Makefile  Makefile.am  Makefile.in  config.h.in  makefile.inc
libasmir/apps/: Makefile  Makefile.am  Makefile.in  print-ir.cpp
libasmir/include/: common.h  irtoir-internal.h
libasmir/src/: Makefile  Makefile.am  Makefile.in  asm_program.c  irtoir.cpp
libasmir/src/traces/: pin_trace.h
libtracewrap/: Makefile  Makefile.in
libtracewrap/libtrace/: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.status  configure  configure.ac  configure.scan
libtracewrap/libtrace/piqi/: Makefile
libtracewrap/libtrace/piqi/piqi/: .gitattributes  .gitignore  Makefile  aclocal.m4  config.h.in  configure  configure.ac  configure.scan  configure.sh  configure.sh.in  setenv.sh
libtracewrap/libtrace/protobuf/: .gitattributes  .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  config.status  configure  configure.ac  configure.scan  libtool  protobuf-lite.pc  protobuf.pc
libtracewrap/libtrace/protobuf/examples/: .gitignore
libtracewrap/libtrace/protobuf/gtest/: .gitattributes  .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  configure.scan  libtool
libtracewrap/libtrace/protobuf/gtest/build-aux/: .gitattributes  config.h.in
libtracewrap/libtrace/protobuf/gtest/xcode/Samples/FrameworkSample/: Info.plist
libtracewrap/libtrace/protobuf/gtest/xcode/Samples/FrameworkSample/WidgetFramework.xcodeproj/: project.pbxproj
libtracewrap/libtrace/protobuf/gtest/xcode/gtest.xcodeproj/: project.pbxproj
libtracewrap/libtrace/protobuf/java/: .gitignore  pom.xml
libtracewrap/libtrace/protobuf/m4/: signal.m4  stl_hash.m4
libtracewrap/libtrace/protobuf/python/: .gitignore
libtracewrap/libtrace/protobuf/src/: .gitignore  Makefile  Makefile.am  Makefile.in
libtracewrap/libtrace/src/: Makefile  Makefile.am  Makefile.in
libtracewrap/libtrace/src/cpp/: Makefile  Makefile.am  Makefile.in  config.h.in
libtracewrap/libtrace/src/cpp/utils/: Makefile  Makefile.am  Makefile.in
libtracewrap/libtrace/src/ocaml/: .gitignore  Makefile  Makefile.in  OCamlMakefile
libtracewrap/libtrace/src/ocaml/utils/: Makefile
m4/: ac_ocaml.m4  gnome-common.m4
objsize-0.16/: Makefile
ocaml/: .gitignore  Makefile  Makefile.in  OCamlMakefile  bfdarch.idl
ocamlgraph-1.8/: .gitignore  Makefile  Makefile.in  aclocal.m4  autogen.sh  config.h.in  config.status  configure  configure.ac  configure.scan
ounit/: .gitignore  Makefile
pcre-ocaml/: .hgignore  Makefile
pcre-ocaml/examples/cloc/: .gitignore
pcre-ocaml/examples/count_hash/: .gitignore
pcre-ocaml/examples/pcregrep/: .gitignore
pcre-ocaml/examples/subst/: .gitignore
pcre-ocaml/lib/: .gitignore
pintraces/: Makefile  getpin.sh
piqi-files/: Makefile
solvers/: .gitignore  getz3.sh
tests/: Makefile  Makefile.in
utils/: Makefile
zarith-1.0/: .gitattributes  .gitignore  Makefile  Makefile.orig.in  aclocal.m4  big_int_Z.annot  config.h.in  configure  configure.ac  configure.scan  configure.sh  gmp.h  project.mak
