## automake Makefile for the libasmir distributed with bap

# Owned and copyright BitBlaze, 2007. All rights reserved.
# Do not copy, disclose, or distribute without explicit written
# permission.
# (Oops, too late for that...)

SUBDIRS= src apps 

MAINTAINERCLEANFILES= makefile.inc

DISTCLEANFILES = *~ .DS_Store stamp-h1
